added count
